# OpenHomie

./: .gitignore  LICENSE  README.md
HomieDeploy/: .gitignore  README.md  d455.py  deploy.onnx  requirements.txt
HomieDeploy/g1_gym_deploy/: CMakeLists.txt  setup.py
HomieDeploy/g1_gym_deploy/envs/: history_wrapper.py  lcm_agent.py
HomieDeploy/g1_gym_deploy/lcm_types/: arm_action_lcmt.py  body_control_data_lcmt.py  body_record_lcmt.lcm  body_record_lcmt.py  command_lcmt.hpp  command_lcmt.lcm  command_lcmt.py  hand_action_lcmt.py  hand_lcmt.lcm  pd_tau_targets_lcmt.py  rc_command_lcmt.py  state_estimator_lcmt.py
HomieDeploy/g1_gym_deploy/scripts/: deploy_policy.py
HomieDeploy/g1_gym_deploy/utils/: cheetah_state_estimator.py  command_profile.py  deployment_runner.py
HomieDeploy/unitree_sdk2/: CMakeLists.txt  g1_control.cpp  hand_control.cpp
HomieDeploy/unitree_sdk2/lcm_types/: arm_action_lcmt.hpp  arm_lcmt.lcm  body_control_data_lcmt.hpp  body_control_data_lcmt.lcm  body_control_data_lcmt.py  hand_action_lcmt.hpp  pd_tau_targets_lcmt.hpp  pd_tau_targets_lcmt.lcm  pd_tau_targets_lcmt.py  state_estimator_lcmt.hpp  state_estimator_lcmt.lcm  state_estimator_lcmt.py
HomieHardware/: README.md
HomieRL/: .gitignore  README.md  requirements.txt
HomieRL/legged_gym/legged_gym/envs/: __init__.py
HomieRL/legged_gym/legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
HomieRL/legged_gym/legged_gym/envs/g1/: g1_29dof_config.py
HomieRL/legged_gym/legged_gym/envs/h1_2/: h1_2_27dof_config.py
HomieRL/legged_gym/legged_gym/scripts/: export_onnx.py  play.py  train.py
HomieRL/legged_gym/legged_gym/utils/: __init__.py  helpers.py  math.py  task_registry.py
HomieRL/legged_gym/resources/robots/g1_description/: g1.xml  g1_inspire.urdf
HomieRL/legged_gym/resources/robots/h1_2_description/: h1_2.urdf  h1_2.xml  h1_2_handless.urdf
HomieRL/rsl_rl/rsl_rl/algorithms/: __init__.py  him_ppo.py  ppo.py
HomieRL/rsl_rl/rsl_rl/modules/: __init__.py  him_actor_critic.py  him_estimator.py  rnn_actor_mlp_critic.py
HomieRL/rsl_rl/rsl_rl/runners/: __init__.py  him_on_policy_runner.py  on_policy_runner.py
HomieRL/rsl_rl/rsl_rl/storage/: __init__.py  him_rollout_storage.py  rollout_storage.py  rollout_storage_extra.py
HomieRL/rsl_rl/rsl_rl/utils/: utils.py  wandb_utils.py
MujocoDeploy/: README.md  g1.yaml  mujoco_deploy_g1.py  remote_controller.py
